notify container of position upon return to user state and softwire window border widths. bug 193295 r=pinkerton,sfraser a=asa